@@ -32,6 +32,7 @@ requests from users, including:
   Greg Freedman
   Ben French
   Jacques Ferrez
+  Natalie Gallagher
   Daniella Gollinelli
   Alistair Gray
   James Greiner
